-
Bug
-
Resolution: Done
-
P2: Important
-
5.15, 6.0
-
None
-
-
8d8b271fe9cd838f2975392ca9856ac19803f0b6 (qt/qtbase/dev) df8f1b86f8621ddbf21090b72c09c38ecb48709a (qt/qtbase/5.15)
In Qt's 5.15 branch QPrinter suggests usage of
pageLayout().pageMargins()
on the other hand, PageLayout doesn't have any method named pageMargins() but have named margins()
You can easily see a couple ( TWO - 2 ) of suggestions for a not existing method in :
https://code.qt.io/cgit/qt/qtbase.git/tree/src/printsupport/kernel/qprinter.cpp?h=5.15
also in here:
https://code.qt.io/cgit/qt/qtbase.git/tree/src/printsupport/kernel/qprinter.h?h=5.15
also in here :
https://code.qt.io/cgit/qt/qtbase.git/tree/src/gui/painting/qpagedpaintdevice.cpp?h=5.15
also in here:
https://code.qt.io/cgit/qt/qtbase.git/tree/src/gui/painting/qpdfwriter.cpp?h=5.15
| For Gerrit Dashboard: QTBUG-86635 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 314220,4 | Fix deprecation documentation about margin and orientation in QPrinter | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 314238,2 | Fix deprecation documentation about margin and orientation in QPrinter | dev | qt/qtbase | Status: MERGED | +2 | 0 |