Fix deprecation documentation about margin and orientation in QPrinter

There were a small typos about those methods and fixed with correct ones.

Fixes: QTBUG-86635
Change-Id: Ib853e502fdcdafdf3ddf7ef6d25d368ebc2a631f
(adapted from commit 8d8b271fe9cd838f2975392ca9856ac19803f0b6)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>