src/gui/painting/qpagedpaintdevice.cpp
@@ -448,7 +448,7 @@ bool QPagedPaintDevice::setPageOrientation(QPageLayout::Orientation orientation)
     You should not call any painting methods between a call to setPageMargins()
     and newPage() as the wrong paint metrics may be used.
 
-    To get the current page margins use pageLayout().pageMargins().
+    To get the current page margins use pageLayout().margins().
 
     Returns true if the page margins were successfully set to \a margins.
 
@@ -470,7 +470,7 @@ bool QPagedPaintDevice::setPageMargins(const QMarginsF &margins)
     You should not call any painting methods between a call to setPageMargins()
     and newPage() as the wrong paint metrics may be used.
 
-    To get the current page margins use pageLayout().pageMargins().
+    To get the current page margins use pageLayout().margins().
 
     Returns true if the page margins were successfully set to \a margins.
 
