src/gui/painting/qpdfwriter.cpp
@@ -360,7 +360,7 @@ void QPdfWriter::addFileAttachment(const QString &fileName, const QByteArray &da
     You should not call any painting methods between a call to setPageOrientation()
     and newPage() as the wrong paint metrics may be used.
 
-    To get the current QPageLayout::Orientation use pageLayout().pageOrientation().
+    To get the current QPageLayout::Orientation use pageLayout().orientation().
 
     Returns true if the page orientation was successfully set to \a orientation.
 
@@ -378,7 +378,7 @@ void QPdfWriter::addFileAttachment(const QString &fileName, const QByteArray &da
     You should not call any painting methods between a call to setPageMargins()
     and newPage() as the wrong paint metrics may be used.
 
-    To get the current page margins use pageLayout().pageMargins().
+    To get the current page margins use pageLayout().margins().
 
     Returns true if the page margins were successfully set to \a margins.
 
@@ -396,7 +396,7 @@ void QPdfWriter::addFileAttachment(const QString &fileName, const QByteArray &da
     You should not call any painting methods between a call to setPageMargins()
     and newPage() as the wrong paint metrics may be used.
 
-    To get the current page margins use pageLayout().pageMargins().
+    To get the current page margins use pageLayout().margins().
 
     Returns true if the page margins were successfully set to \a margins.
 
